# coursework-pc

UML/: class.drawio  deployment.drawio  sequence.drawio  sequenceAddFile.drawio  sequenceFindFiles.drawio  use case.drawio
course_pc/: CMakeLists.txt  file_manager.cpp  indexer.cpp  main.cpp  main1.cpp  thread_pool.cpp  user_search.cpp
course_pc/aclImdb/custom/: Detectives.txt  HIVE.txt  Hee_Hee.txt  I could be everything.txt  Lalala.txt  Okokok.txt  PC.txt  my name is.txt  new.txt
